--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 python-telegram-bot[job-queue]==21.10
-pandas
-pandas_ta
-yfinance
-matplotlib
-numpy
+pandas==2.2.0
+pandas_ta==0.3.14b0
+yfinance==0.2.33
+matplotlib==3.8.0
+numpy==1.24.3
+python-dotenv==1.0.0
+aiohttp==3.9.1
