--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-python-telegram-bot[job-queue]==21.10
-pandas==2.2.2
-pandas_ta==0.3.14b0
-yfinance==0.2.40
-matplotlib==3.9.0
-numpy==1.26.4
-python-dotenv==1.0.1
-aiohttp==3.9.5
+python-telegram-bot==21.10
+pandas==2.2.0
+pandas-ta==0.3.14b0
+yfinance==0.2.33
+matplotlib==3.8.0
+numpy==1.24.3
