--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-python-telegram-bot==20.7
+python-telegram-bot[job-queue]==20.7
 pandas==2.1.4
 yfinance==0.2.33
 numpy==1.24.3
+TA-Lib==0.4.28
+scipy==1.11.4
+aiohttp==3.9.1
